# Penjing

./: .clang-format  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-linux_amd64.yaml
conan/: conanfile.py  x86_64-gcc
include/: CMakeLists.txt  cache.hpp  concepts.hpp  disjoint_sets.hpp  forward_macro.hpp  lru_cache.hpp  void_t.hpp
include/datastruct/: cache.hpp
include/meta/: concept_union.hpp  concepts.hpp  has_data.hpp  has_size.hpp  is_hash.hpp  is_string_view.hpp  type_list.hpp
include/suffix_tree/: suffix_tree.hpp
include/suffix_tree/detail/: .copy.hpp.swp  access.hpp  copy.hpp  insertion_context.hpp  payload.hpp  suffix_tree_node.hpp  walk.hpp
include/utils/: container_cleaner.hpp  memory.hpp
meta/: CMakeLists.txt
meta/include/Meta/: Access.hpp  CurryTemplate.hpp  IsDetected.hpp  Memory.hpp  SelfVariant.hpp  ToReferenceWrapper.hpp  VariantHelpers.hpp
meta/include/Meta/CustomizationPoints/: Mapped.hpp
meta/include/Penjing/Meta/: Access.hpp  CurryTemplate.hpp  DetectedOr.hpp  DifferenceType.hpp  IsComparable.hpp  IsDetected.hpp  IsIterator.hpp  IteratorType.hpp  MakeIteratorRange.hpp  Memory.hpp  SelfVariant.hpp  ToReferenceWrapper.hpp  ValueType.hpp  VariantHelpers.hpp
meta/include/Penjing/Meta/CustomizationPoints/: Mapped.hpp
meta/test/: CMakeLists.txt
meta/test/src/: Mapped.cpp  main.cpp
storage/: CMakeLists.txt
storage/include/Penjing/Storage/: ArrayList.hpp  Store.hpp
storage/include/Penjing/Storage/Bindings/: ArrayList.hpp  StdMap.hpp  StdUnorderedMap.hpp
storage/test/: CMakeLists.txt
storage/test/src/: Store.cpp
suffix-tree/: CMakeLists.txt
suffix-tree/include/Penjing/SuffixTree/Algorithm/: MutatingNodeAlgorithm.hpp
suffix-tree/include/Penjing/SuffixTree/Builders/Ukkonen/: BuildString.hpp  Split.hpp  TestAndSplit.hpp  Update.hpp
suffix-tree/include/Penjing/SuffixTree/Concepts/: NodeTraits.hpp  String.hpp  StringView.hpp
suffix-tree/include/Penjing/SuffixTree/Core/: ArrayListStorage.hpp  Node.hpp  NodeStore.hpp  StdUnorderedMapNodeTraits.hpp  Transition.hpp  Tree.hpp
suffix-tree/include/SuffixTree/Algorithm/: CompareNodes.hpp  MutatingNodeAlgorithm.hpp  MutatingTreeAlgorithm.hpp  Walk.hpp
suffix-tree/include/SuffixTree/Builders/Ukkonen/: BuildString.hpp  Canonize.hpp  Split.hpp  TestAndSplit.hpp  Update.hpp
suffix-tree/include/SuffixTree/Concepts/: Node.hpp  NodeTraits.hpp  String.hpp  StringView.hpp
suffix-tree/include/SuffixTree/Core/: ArrayListStorage.hpp  Node.hpp  NodeStore.hpp  StdUnorderedMapNodeTraits.hpp  Transition.hpp  Tree.hpp  UnsafeTag.hpp
suffix-tree/test/: CMakeLists.txt
suffix-tree/test/include/: BananaFixture.hpp  Dump.hpp  NodeFactory.hpp
suffix-tree/test/src/: BananaFixture.cpp  Concepts.cpp  NodeStore.cpp  NodeTraits.cpp  SuffixTree.cpp  Walk.cpp  concepts.cpp  main.cpp
suffix-tree/test/src/Algorithm/: CompareNodes.cpp  Walk.cpp
suffix-tree/test/src/Ukkonen/: BuildString.cpp  Canonize.cpp  Split.cpp  TestAndSplit.cpp  Update.cpp
suffixtree/: CMakeLists.txt
suffixtree/include/Penjing/SuffixTree/Algorithm/: CompareNodes.hpp  MutatingNodeAlgorithm.hpp  MutatingTreeAlgorithm.hpp  Walk.hpp
suffixtree/include/Penjing/SuffixTree/Builders/: TreeBuild.hpp  Ukkonen.hpp
suffixtree/include/Penjing/SuffixTree/Builders/Ukkonen/: Build.hpp  Canonize.hpp  Split.hpp  TestAndSplit.hpp  Update.hpp
suffixtree/include/Penjing/SuffixTree/Concepts/: HasStringStorage.hpp  Node.hpp
suffixtree/include/Penjing/SuffixTree/Core/: NakedTree.hpp  Node.hpp  Tree.hpp  UnsafeTag.hpp
suffixtree/test/: CMakeLists.txt
suffixtree/test/include/: BananaFixture.hpp  Dump.hpp  NodeFactory.hpp  ToStream.hpp
suffixtree/test/src/: BananaFixture.cpp  Concepts.cpp  SuffixTree.cpp
suffixtree/test/src/Algorithm/: CompareNodes.cpp  Walk.cpp
suffixtree/test/src/Ukkonen/: Build.cpp  Canonize.cpp  Split.cpp  TestAndSplit.cpp  Update.cpp
tests/: CMakeLists.txt  main.cpp  test_concepts.cpp  test_disjoint_sets.cpp  test_lru_cache.cpp  test_memory.cpp  test_suffix_tree.cpp  throwing_allocator.hpp
thirdparties/: CMakeLists.txt
